fixed flex wrap flex grow margin for members

--- a/client/src/components/member.css
+++ b/client/src/components/member.css
@@ -1,10 +1,11 @@
 .member {
     background: #E0E0E0;
-    margin: 0 10px;
+    margin: 10px 0 0 0;
     padding: 8px;
     min-width: 300px;
     border-radius: 4px;
-    max-width: 1000px;
+    max-width: 320px;
+    flex-grow: 1;
 }
 
 .member:first-child {
