--- a/client/src/components/team.css
+++ b/client/src/components/team.css
@@ -1,6 +1,7 @@
 .members {
     display: flex;
     align-items: flex-start;
+    flex-wrap:wrap;
 }
 .team> form {
     max-width: 300px;
